--- a/SAE201/MainWindow.xaml
+++ b/SAE201/MainWindow.xaml
@@ -9,5 +9,7 @@
     Width="800"
     Height="450"
     mc:Ignorable="d">
-    <Grid />
+    <Grid >
+        <Button Content="Button" HorizontalAlignment="Left" Margin="253,131,0,0" VerticalAlignment="Top" Height="133" Width="266"/>
+    </Grid>
 </Window>
