--- a/SAE201/Connection.xaml
+++ b/SAE201/Connection.xaml
@@ -1,20 +1,40 @@
-﻿<Window x:Class="SAE201.Connection"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:SAE201"
-        mc:Ignorable="d"
-        Title="Connection" Height="450" Width="300">
+﻿<Window
+    x:Class="SAE201.Connection"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:SAE201"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="Connection"
+    Width="300"
+    Height="450"
+    mc:Ignorable="d">
     <Grid>
         <Grid>
             <StackPanel>
-                <Label HorizontalAlignment="Center" VerticalAlignment="Center" Content="Connection" FontSize="18" FontWeight="Bold" IsEnabled="False" />
+                <Label
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    Content="Connection"
+                    FontSize="18"
+                    FontWeight="Bold"
+                    IsEnabled="False" />
                 <Label Margin="25,25,0,0" Content="Identifiant" />
-                <TextBox x:Name="txLogin" Width="200" TextWrapping="Wrap" />
+                <TextBox
+                    x:Name="txLogin"
+                    Width="200"
+                    TextWrapping="Wrap" />
                 <Label Margin="25,10,0,0" Content="Mot de passe " />
-                <TextBox x:Name="txMdp" Width="200" TextWrapping="Wrap" />
-                <Button x:Name="seConnecter" Width="108" Margin="0,25,0,0" Content="Se connecter"  /><!--Click="seConnecter_Click"-->
+                <TextBox
+                    x:Name="txMdp"
+                    Width="200"
+                    TextWrapping="Wrap" />
+                <Button
+                    x:Name="seConnecter"
+                    Width="108"
+                    Margin="0,25,0,0"
+                    Click="seConnecter_Click"
+                    Content="Se connecter" />
             </StackPanel>
         </Grid>
     </Grid>
