--- a/SAE201/UserControls/UserControlFicheClient.xaml
+++ b/SAE201/UserControls/UserControlFicheClient.xaml
@@ -5,41 +5,62 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:SAE201.UserControls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
+    d:DesignHeight="300"
+    d:DesignWidth="300"
     mc:Ignorable="d">
     <StackPanel x:Name="panelUCFormClient">
         <Label
+            x:Name="LabTitre"
+            HorizontalAlignment="Center"
+            Content="Ajouter un client"
+            FontSize="22"
+            IsEnabled="False" />
+
+        <Label
             x:Name="labNom"
             Width="200"
+            Margin="0,10,0,0"
             Content="Nom"
             FontSize="10" />
         <TextBox
             x:Name="textNom"
             Width="200"
+            Margin="0,5,0,0"
             Text="{Binding Nom, ValidatesOnExceptions=True}"
             TextWrapping="Wrap" />
 
         <Label
             x:Name="labPrenom"
             Width="200"
+            Margin="0,10,0,0"
             Content="Prénom"
             FontSize="10" />
         <TextBox
             x:Name="textPrenom"
             Width="200"
+            Margin="0,5,0,0"
             Text="{Binding Maitre, ValidatesOnExceptions=True}"
             TextWrapping="Wrap" />
 
         <Label
             x:Name="labMail"
             Width="200"
+            Margin="0,10,0,0"
             Content="Mail"
             FontSize="10" />
         <TextBox
             x:Name="textMail"
             Width="200"
+            Margin="0,5,0,0"
             Text="{Binding Poids, ValidatesOnExceptions=True}"
             TextWrapping="Wrap" />
+        <Button
+            x:Name="butValider"
+            Width="106"
+            Margin="0,25,0,0"
+            HorizontalAlignment="Center"
+            Click="butValider_Click"
+            Content="Button" />
+
     </StackPanel>
 </UserControl>
