--- a/SAE201/UserControls/RechercherVin.xaml
+++ b/SAE201/UserControls/RechercherVin.xaml
@@ -8,7 +8,7 @@
       d:DesignHeight="450" d:DesignWidth="800">
 
     <Grid Margin="20">
-        <TabControl>
+        <TabControl SelectionChanged="TabControl_SelectionChanged">
             <TabItem Header="TabItem">
                 <StackPanel Background="#FFE5E5E5">
                     <Grid>
@@ -62,15 +62,22 @@
                     </StackPanel>
                 </StackPanel>
             </TabItem>
-            <TabItem Header="TabItem" Margin="-2,-2,2,2">
-                <Button Background="#6366F1" Foreground="White" BorderThickness="0" Padding="20,12"  FontWeight="Normal" Cursor="Hand" FontSize="14" Height="44" Margin="0,0,525,0">
-                    <StackPanel Orientation="Horizontal">
-                        <!-- Icône check -->
-                        <Path Width="16" Height="16" Fill="White" Margin="0,0,8,0" VerticalAlignment="Center" Data="M9 12L11 14L15 10M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12Z"/>
-                        <TextBlock Text="Valider la demande" FontSize="14" VerticalAlignment="Center"/>
-                    </StackPanel>
-                </Button>
+            <TabItem Header="TabItem" Margin="-2,0,2,0" Height="22" VerticalAlignment="Bottom">
+                <StackPanel >
+                    <Label Content="Créer une demande" Width="730" FontSize="18" FontWeight="Bold" Margin="0,10,0,0"/>
+                    <DataGrid Height="235"  Width="734" Margin="0,30,0,0" SelectionChanged="DataGrid_SelectionChanged">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header="Vin"  Width="450"/>
+                            <DataGridTextColumn Header="Date"  Width="*"/>
+                            <DataGridTextColumn Header="Quantité"  Width="*"/>
+                        </DataGrid.Columns>
+                    </DataGrid>
+                    <Button Content="Valider la demande" Width="120" Margin="600,25,0,0" Height="25"/>
+                </StackPanel>
+
+
             </TabItem>
+
         </TabControl>
     </Grid>
 </UserControl>
