--- a/SAE201/UserControls/UserControlFicheClient.xaml
+++ b/SAE201/UserControls/UserControlFicheClient.xaml
@@ -7,62 +7,125 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:DesignHeight="300"
     d:DesignWidth="300"
+    Background="#F9F9F9"
     mc:Ignorable="d">
-    <StackPanel x:Name="panelUCFormClient">
-        <Label
-            x:Name="LabTitre"
-            HorizontalAlignment="Center"
-            Content="Fiche client"
-            FontSize="22"
-            Foreground="Black"
-            IsEnabled="False" />
 
-        <Label
-            x:Name="labNom"
-            Width="200"
-            Margin="0,10,0,0"
-            Content="Nom"
-            FontSize="10" />
-        <TextBox
-            x:Name="textNom"
-            Width="200"
-            Margin="0,5,0,0"
-            Text="{Binding NomClient, ValidatesOnExceptions=True}"
-            TextWrapping="Wrap" />
+    <Border
+        Margin="10"
+        Background="White"
+        BorderBrush="#8B0000"
+        BorderThickness="2"
+        CornerRadius="5">
+        <Grid>
+            <Border
+                Height="30"
+                VerticalAlignment="Top"
+                Background="#F8F8F8"
+                BorderBrush="#E0E0E0"
+                BorderThickness="0,0,0,1">
+                <StackPanel
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    Orientation="Horizontal">
+                    <TextBlock
+                        Margin="0,0,8,0"
+                        FontSize="16"
+                        Text="🍷" />
+                    <TextBlock
+                        Height="18"
+                        FontSize="12"
+                        FontWeight="Bold"
+                        Foreground="#8B0000"
+                        Text="NICOLAS" />
+                </StackPanel>
+            </Border>
 
-        <Label
-            x:Name="labPrenom"
-            Width="200"
-            Margin="0,10,0,0"
-            Content="Prénom"
-            FontSize="10" />
-        <TextBox
-            x:Name="textPrenom"
-            Width="200"
-            Margin="0,5,0,0"
-            Text="{Binding PrenomClient, ValidatesOnExceptions=True}"
-            TextWrapping="Wrap" />
-
-        <Label
-            x:Name="labMail"
-            Width="200"
-            Margin="0,10,0,0"
-            Content="Mail"
-            FontSize="10" />
-        <TextBox
-            x:Name="textMail"
-            Width="200"
-            Margin="0,5,0,0"
-            Text="{Binding MailClient, ValidatesOnExceptions=True}"
-            TextWrapping="Wrap" />
-        <Button
-            x:Name="butValider"
-            Width="106"
-            Margin="0,25,0,0"
-            HorizontalAlignment="Center"
-            Click="butValider_Click"
-            Content="Button"
-            IsDefault="True" />
-
-    </StackPanel>
+            <StackPanel x:Name="panelUCFormClient" Margin="0,30,0,0">
+                <Label
+                    x:Name="LabTitre"
+                    Height="40"
+                    Padding="10,5"
+                    HorizontalAlignment="Center"
+                    Background="White"
+                    BorderBrush="#8B0000"
+                    BorderThickness="0,0,0,2"
+                    Content="Fiche client"
+                    FontSize="22"
+                    FontWeight="Bold"
+                    Foreground="#8B0000"
+                    IsEnabled="False" />
+                <Label
+                    x:Name="labNom"
+                    Width="200"
+                    Height="22"
+                    Margin="0,5,0,0"
+                    Content="Nom"
+                    FontSize="10"
+                    FontWeight="SemiBold"
+                    Foreground="#8B0000" />
+                <TextBox
+                    x:Name="textNom"
+                    Width="200"
+                    Height="30"
+                    Margin="0,-1,0,0"
+                    Padding="8,5"
+                    Background="White"
+                    BorderBrush="#8B0000"
+                    BorderThickness="2"
+                    FontSize="12"
+                    Text="{Binding NomClient, ValidatesOnExceptions=True}"
+                    TextWrapping="Wrap" />
+                <Label
+                    x:Name="labPrenom"
+                    Width="200"
+                    Content="Prénom"
+                    FontSize="10"
+                    FontWeight="SemiBold"
+                    Foreground="#8B0000" />
+                <TextBox
+                    x:Name="textPrenom"
+                    Width="200"
+                    Height="30"
+                    Padding="8,5"
+                    Background="White"
+                    BorderBrush="#8B0000"
+                    BorderThickness="2"
+                    FontSize="12"
+                    Text="{Binding PrenomClient, ValidatesOnExceptions=True}"
+                    TextWrapping="Wrap" />
+                <Label
+                    x:Name="labMail"
+                    Width="200"
+                    Content="Mail"
+                    FontSize="10"
+                    FontWeight="SemiBold"
+                    Foreground="#8B0000" />
+                <TextBox
+                    x:Name="textMail"
+                    Width="200"
+                    Height="30"
+                    Padding="8,5"
+                    Background="White"
+                    BorderBrush="#8B0000"
+                    BorderThickness="2"
+                    FontSize="12"
+                    Text="{Binding MailClient, ValidatesOnExceptions=True}"
+                    TextWrapping="Wrap" />
+                <Button
+                    x:Name="butValider"
+                    Width="106"
+                    Height="35"
+                    Margin="0,5,0,0"
+                    HorizontalAlignment="Center"
+                    Background="#8B0000"
+                    BorderThickness="1"
+                    Click="butValider_Click"
+                    Content="Button"
+                    Cursor="Hand"
+                    FontWeight="SemiBold"
+                    Foreground="White"
+                    IsDefault="True" />
+            </StackPanel>
+        </Grid>
+    </Border>
 </UserControl>
