--- a/SAE201/UserControls/RechercherVin.xaml
+++ b/SAE201/UserControls/RechercherVin.xaml
@@ -76,7 +76,7 @@
                                                HorizontalAlignment="Center"/>
                                             <Button Width="25" Height="25" Content="&#xE710;" 
                                             FontFamily="Segoe MDL2 Assets" ToolTip="Ajouter au panier" 
-                                            HorizontalAlignment="Right" Margin="0,5,0,0" Tag="{Binding}"/>
+                                            HorizontalAlignment="Right" Margin="0,5,0,0" Tag="{Binding}" Click="Button_Click"/>
                                         </StackPanel>
                                     </Border>
                                 </DataTemplate>
@@ -89,11 +89,11 @@
         <TabItem Header="TabItem" Margin="-2,0,2,0" Height="22" VerticalAlignment="Bottom">
             <StackPanel>
                 <Label Content="Créer une demande" Width="730" FontSize="18" FontWeight="Bold" Margin="0,10,0,0"/>
-                <DataGrid Height="235"  Width="734" Margin="0,30,0,0">
+                <DataGrid Height="235" Width="734" Margin="0,30,0,0" ItemsSource="{Binding VinsDemande}">
                     <DataGrid.Columns>
-                        <DataGridTextColumn Header="Vin"  Width="450"/>
-                        <DataGridTextColumn Header="Date"  Width="*"/>
-                        <DataGridTextColumn Header="Quantité"  Width="*"/>
+                        <DataGridTextColumn Header="Vin" Binding="{Binding NomVin}" Width="450"/>
+                        <DataGridTextColumn Header="Date" Binding="{Binding Date}" Width="*"/>
+                        <DataGridTextColumn Header="Quantité" Binding="{Binding Quantite}" Width="*"/>
                     </DataGrid.Columns>
                 </DataGrid>
                 <Button Content="Valider la demande" Width="120" Margin="600,25,0,0" Height="25"/>
