--- a/SAE201/UserControls/RechercherVin.xaml
+++ b/SAE201/UserControls/RechercherVin.xaml
@@ -89,7 +89,7 @@
         <TabItem Header="TabItem" Margin="-2,0,2,0" Height="22" VerticalAlignment="Bottom">
             <StackPanel>
                 <Label Content="Créer une demande" Width="730" FontSize="18" FontWeight="Bold" Margin="0,10,0,0"/>
-                <DataGrid Height="235" Width="734" Margin="0,30,0,0" ItemsSource="{Binding VinsDemande}">
+                <DataGrid Height="235" Width="734" Margin="0,30,0,0" ItemsSource="{Binding VinsDemande}" AutoGenerateColumns="False">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="Vin" Binding="{Binding NomVin}" Width="450"/>
                         <DataGridTextColumn Header="Date" Binding="{Binding Date}" Width="*"/>
